Revision history for {{$dist->name}}

{{$NEXT}}
       - add force_overwrite attribute to SQLTDM

0.001002  2010-07-07 21:11:45 CST6CDT
       - Add basic intro (norkakn)
       - install should now work in all cases, previously had a really bad bug
         where it would try to install the version storage table twice, which
         breaks everything
       - Fix issue where the ignore_version connect attr doesn't work in all
         situations

0.001001  2010-06-26 10:46:03 CST6CDT
       - Fix bad parameters in version_storage install methods
       - Fix Try::Tiny typo

0.001000  2010-06-10 21:55:40 CST6CDT
       - Use package logger instead of default logger

0.001000_14 2010-06-03 20:17:03 CST6CDT
       - Rename preinstall to initialize

0.001000_13 2010-06-01 23:30:15 CST6CDT
       - No more serialized SQL, we serialize the SQLT schema instead
       - Completely reorganize the name of directories for more user friendlyness
       - take out support for _generic since it's against my creed

0.001000_12 2010-05-27 19:12:20 CST6CDT
       - Add missing dep
       - Better defaults and cascading for Logging
       - Die on SQL errors

0.001000_11 2010-05-21 00:16:13 CST6CDT
       - Make default (and preferred) way of using this tool serialized SQL
         instead of just sql files
       - Add logging with Log::Contextual

0.001000_10 2010-05-18 00:07:31 CST6CDT
       - upgrade_directory is wrong and vague, instead we use script_directory
       - stricter validation (no undef) on versions to prevent weird surprises
       - change method args to named args
       - document method args
       - preconnect should not connect to the database

0.001000_09 2010-05-15 23:19:05 CST6CDT
       - Schemata is no longer required to add version checking component

0.001000_08 2010-05-11 22:42:20 CST6CDT
       - Add missing dep namespace::autoclean

0.001000_07 2010-05-09 01:59:59 CST6CDT
       - Downgrades swap from version and to version, so instead of up 1-2